     New: On Mac OS X, each document is now opened in its own window, the modification state of the document
          is properly reflected and the title bar contains the file icon.
     New: Using the more native file dialog on Mac OS X.
     New: Replaced Add Annotation menus with a dialog and filterable list to aid keyboard usage.
     New: Added Undo/Redo support.
     New: Added Find support.
     New: Added keyboard accelerators for Add Annotation and Add Sub-Region.
     New: Added Window menu on Mac OS X.
     New: Added Open Recent menu.
     New: Added Revert to Saved.
     New: Added the ability to apply custom styles to annotations.
     New: Building on the better events from hex-components, the tree now updates only the portion which
          changed instead of updating the whole tree and losing the expansion state.
     New: Added document unsaved (asterisk) indicators for non-Aqua look and feels.

   Fixed: NullPointerException for new notebooks due to a lack of annotations.
   Fixed: Various application behaviour issues for Mac OS X.
   Fixed: Unsaved document indicator properly reflects the state.

 Changed: Document titles now show the file extension.
 Changed: Actions which require focus now disable when the required focus is not available.
 Changed: Renamed Remove Annotation to Delete and removed Remove Sub-Region since it can be achieved
          via Remove Annotation anyway.

Version 0.3 (2012-11-10)

     New: Annotations not visible in the tree due to their parents being collapsed are now hidden from rendering
          in the viewer.
     New: Selecting an annotation in the tree will select the corresponding range in the viewer.

 Changed: Code usable by other projects was moved out into hex-components (doesn't affect functionality.)
 Changed: Zero-width annotations removed as they were causing altogether too much trouble (e.g. when sorting a list