@@ -84,10 +84,20 @@ Redo.mnemonic=r
 Redo.accelerator.mac=shift meta Z
 Redo.accelerator.other=ctrl Y
 
+Cut.name=Cut
+Cut.mnemonic=t
+Cut.accelerator.mac=meta X
+Cut.accelerator.other=ctrl X
+
 Copy.name=Copy
 Copy.mnemonic=c
 Copy.accelerator.mac=meta C
 Copy.accelerator.other=ctrl C
+
+Paste.name=Paste
+Paste.mnemonic=p
+Paste.accelerator.mac=meta V
+Paste.accelerator.other=ctrl V
 
 Delete.name=Delete
 Delete.mnemonic=d
